--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,10 +29,12 @@ jobs:
         with:
           distribution: "temurin"
           java-version: 19
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Check formatting
-        run: ./gradlew spotlessCheck
+            #- name: Grant execute permission for gradlew
+            #  run: chmod +x gradlew
+            #- name: Check formatting
+            #  run: ./gradlew spotlessCheck
+      - name: Exec
+        run: gradle spotlessCheck
 
   build:
     strategy:
@@ -48,25 +50,10 @@ jobs:
         with:
           distribution: "temurin"
           java-version: 19
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+            #- name: Grant execute permission for gradlew
+            #  run: chmod +x gradlew
+            #- name: Build with Gradle
+            #  run: echo 'no' | ./gradlew build --scan
       - name: Build with Gradle
-        run: echo 'no' | ./gradlew build --scan
-  create-artifacts:
-    needs: [ build, format ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: "temurin"
-          java-version: 19
-      - name: Build app
-        run: ./gradlew assembleDebug
-      - uses: actions/upload-artifact@v2
-        with:
-          name: FestFriendDebug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+        run: echo 'no' | gradle build --scan
+
